--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Choose your high quality product</h3>
                 </div>
             </div>
             <div class="row">
@@ -21,6 +21,10 @@
                                 </div>
                                 <div class="control-group form-group">
                                     <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                                    <p class="help-block text-danger"></p>
+                                </div>
+                                    <div class="control-group form-group">
+                                    <input type="tel" class="form-control" placeholder="Your Shipping address *" id="phone" required data-validation-required-message="Please enter your Shipping address.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
